[package]
name = "rust-test"
version = "0.1.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.24.0"
serde_json = "1.0.41"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
