[package]
name = "make-trace"
version = "0.1.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.2"
serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }
once_cell = "1.7.2"
